5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1834_2603.log
== SUBMITION (2019-06-30 09:30:11) 
-- CODE:
rom numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
 [2, 0, 7, 12, 4, 2, 15],
 [11, 7, 0, 11, 8, 3, 13],
 [6, 12, 11, 0, 10, 2, 1],
 [15, 4, 8, 10, 0, 5, 13],
 [11, 2, 3, 2, 5, 0, 14],
 [1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])
-- EXECUTION TIME:
0.783758
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:30:36) 
-- CODE:
rom numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])
-- EXECUTION TIME:
0.896024
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 09:30:39) 
-- CODE:
rom numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])
-- ERROR:
File "XXXX", line 1
    rom numpy import *
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:30:54) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])
-- EXECUTION TIME:
1.16498
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1834/2603/main.py", line 3, in <module>
    a = int(input())
ValueError: invalid literal for int() with base 10: '[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 09:31:46) 
-- CODE:
from numpy import *
from  numpy.linalg import *
a = int(input("Digite o codigo para a cidade A: "))
b = int(input("Digite o codigo para a cidade B: "))
matdist = array([[0, 2, 11, 6, 15, 11, 1],
[2, 0, 7, 12, 4, 2, 15],
[11, 7, 0, 11, 8, 3, 13],
[6, 12, 11, 0, 10, 2, 1],
[15, 4, 8, 10, 0, 5, 13],
[11, 2, 3, 2, 5, 0, 14],
[1, 15, 13, 1, 13, 14, 0]])

i = (a//111) - 1
j = (b//111) - 1
print(matdist[i, j])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:46:32) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Digite uma matiz 4x4: ")))
for j in range(4):
mat[:,j] = sorted(mat[:,j], reverse=True)

print(mat)
-- EXECUTION TIME:
3.2742
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 5
    mat[:,j] = sorted(mat[:,j], reverse=True)
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-30 09:47:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Digite uma matiz 4x4: ")))
for j in range(4):
mat[:,j] = sorted(mat[:,j], reverse=True)

print(mat)
-- ERROR:
File "XXXX", line 5
    mat[:,j] = sorted(mat[:,j], reverse=True)
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:47:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Digite uma matiz 4x4: ")))
for j in range(4):
mat[:,j] = sorted(mat[:,j], reverse=True)

print(mat)
-- EXECUTION TIME:
3.20165
-- ERROR:
  File "/home/codebench/codes/1834/2603/main.py", line 5
    mat[:,j] = sorted(mat[:,j], reverse=True)
      ^
IndentationError: expected an indented block

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:47:31) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Digite uma matiz 4x4: ")))
for j in range(4):
	mat[:,j] = sorted(mat[:,j], reverse=True)

print(mat)
-- EXECUTION TIME:
5.14946
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
Digite uma matiz 4x4: [[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-30 09:47:56) 
-- CODE:
from numpy import *
from numpy.linalg import *
mat = array(eval(input("Digite uma matiz 4x4: ")))
for j in range(4):
	mat[:,j] = sorted(mat[:,j], reverse=True)
print(mat)
-- EXECUTION TIME:
5.22741
-- TEST CASE 1:
---- input:
[[1,1,1,1],[2,2,2,2],[3,3,3,3],[4,4,4,4]]
---- correct output:
[[4 4 4 4]
[3 3 3 3]
[2 2 2 2]
[1 1 1 1]]
---- user output:
[[4 4 4 4]
 [3 3 3 3]
 [2 2 2 2]
 [1 1 1 1]]
-- TEST CASE 2:
---- input:
[[4,1,1,3],[3,2,2,3],[2,3,3,3],[1,4,4,3]]
---- correct output:
[[4 4 4 3]
[3 3 3 3]
[2 2 2 3]
[1 1 1 3]]
---- user output:
[[4 4 4 3]
 [3 3 3 3]
 [2 2 2 3]
 [1 1 1 3]]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
